# snippetlauncher

./: .gitignore  LICENSE  README.md  cli.py  install.sh  pyproject.toml  requirements.txt  seed.py  snippetlauncher.spec  uninstall.sh
db/: __init__.py  models.py  repository.py
launcher/: popup.py  rofi.py
paste/: paster.py
ui/: app.py
