[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "snippetlauncher"
version = "0.1.0"
description = "A keyboard-driven snippet manager for KDE Plasma and GNOME"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "pyxdg>=0.28",
]

[project.optional-dependencies]
ui = [
    # GTK4 bindings are installed via system packages, not pip:
    # sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-4.0 gir1.2-adw-1
    # sudo apt install gir1.2-gtksource-5
]

[project.scripts]
snippetlauncher = "snippetlauncher.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
"snippetlauncher" = "."
